Sun Oct 24 20:59:27 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_run): New function.
	* lib/pipeline.h (pipeline_run): Add prototype.
	* lib/security.c (do_system_drop_privs): Use it.
	* src/man.c (do_extern, run_mandb): Likewise.
	* src/whatis.c (use_grep): Likewise.

Sun Oct 24 20:56:00 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (pipeline_pump): Mention in comment that arguments
	  must be NULL-terminated.

Sun Oct 24 20:55:10 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (pipeline_new_commandv): Fix comment.

Sat Oct 23 20:52:24 BST 2010  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AC_TYPE_SIGNAL): Remove (unused).

Tue Oct 12 11:16:31 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/util.c (init_locale): New function.
	* include/manconfig.h.in (init_locale): Add prototype.
	* src/Makefile.am (AM_CPPFLAGS): Move -DLOCALEDIR to ...
	* lib/Makefile.am (libman_la_CPPFLAGS): ... here.

	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
	  (main), src/lexgrog_test.c (main), src/man.c (main),
	  src/manconv_main.c (main), src/mandb.c (main), src/manpath.c
	  (main), src/whatis.c (main), src/zsoelim.c (main): Use
	  init_locale.

	* lib/util.c (init_locale): Suppress warning message if
	  DPKG_RUNNING_VERSION is set in the environment.
	* NEWS: Document this.

Mon Oct 11 09:38:03 BST 2010  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Update for restored bzr+ssh
	  access.

Mon Oct 11 09:36:55 BST 2010  Colin Watson  <cjwatson@debian.org>

	* .bzrignore: Remove tools/config.rpath.*, which hasn't been needed
	  here since 2009-04-14.

Tue Oct  5 11:48:57 BST 2010  Colin Watson  <cjwatson@debian.org>

	* man/po4a/Makefile.am (clean-local): Don't use 'po4a
	  --rm-translations', since it sometimes updates PO/POT files and
	  the obvious workaround for that breaks 'make distcheck'.
	  Reimplement it by hand instead.
