@@ -1,3 +1,9 @@
+Sun Oct 24 21:03:25 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_new_command_args): New function.
+	* lib/pipeline.h (pipeline_new_command_args): Add prototype.
+	* src/man.c (make_browser): Use it.
+
 Sun Oct 24 20:59:27 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_run): New function.
